--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,14 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   width: 100vw;
   height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   /* line-height: 1.5; */
   font-weight: 400;
