--- a/src/components/AppointmentScheduler/styles.css
+++ b/src/components/AppointmentScheduler/styles.css
@@ -5,7 +5,7 @@
 
 .appointment-container .body .calender-container {
   min-width: 300px;
-  max-width: 400px;
+  /* max-width: 400px; */
   gap: 10px;
 
   background-color: #ddd;
@@ -49,7 +49,7 @@
 }
 
 .appointment-container .footer {
-  background-color: #007c4f;
+  background-color: var(--primary-color);
   padding: 16px 20px;
 }
 
@@ -57,4 +57,9 @@
   color: #fff;
   font-size: 12px;
   font-weight: 500;
+}
+
+.slots-wrapper {
+  gap: 10px;
+  padding: 32px;
 }
