--- a/src/components/Calender/styles.css
+++ b/src/components/Calender/styles.css
@@ -42,7 +42,7 @@
   margin-bottom: 1em;
 }
 .react-calendar__navigation button {
-  color: #6f48eb;
+  color: var(--primary-color);
   min-width: 44px;
   background: none;
   font-size: 16px;
@@ -72,7 +72,7 @@
   font-weight: bold;
 }
 .react-calendar__month-view__days__day--weekend {
-  color: #6f48eb;
+  color: var(--primary-color);
 }
 .react-calendar__month-view__days__day--neighboringMonth {
   color: #757575;
@@ -95,7 +95,7 @@
 .react-calendar__tile:enabled:hover,
 .react-calendar__tile:enabled:focus {
   background: #f8f8fa;
-  color: #6f48eb;
+  color: var(--primary-color);
   border-radius: 6px;
 }
 .react-calendar__tile--now {
@@ -106,27 +106,27 @@
 }
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #6f48eb33;
+  background: var(--primary-color) 33;
   border-radius: 6px;
   font-weight: bold;
-  color: #6f48eb;
+  color: var(--primary-color);
 }
 .react-calendar__tile--hasActive {
-  background: #6f48eb;
+  background: var(--primary-color);
 }
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
   background: #f8f8fa;
 }
 .react-calendar__tile--active {
-  background: #6f48eb;
+  background: var(--primary-color);
   border-radius: 6px;
   font-weight: bold;
   color: white;
 }
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #6f48eb;
+  background: var(--primary-color);
   color: white;
 }
 .react-calendar--selectRange .react-calendar__tile--hover {
@@ -135,7 +135,7 @@
 
 .react-calendar__tile--range {
   background: #bfb3e8;
-  color: #6f48eb;
+  color: var(--primary-color);
   border-radius: 0;
 }
 .react-calendar__tile--rangeStart {
@@ -143,7 +143,7 @@
   border-bottom-right-radius: 0;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
-  background: #6f48eb;
+  background: var(--primary-color);
   color: white;
 }
 .react-calendar__tile--rangeEnd {
@@ -151,6 +151,6 @@
   border-bottom-left-radius: 0;
   border-top-right-radius: 6px;
   border-bottom-right-radius: 6px;
-  background: #6f48eb;
+  background: var(--primary-color);
   color: white;
 }
