--- a/src/components/SlotCard/styles.css
+++ b/src/components/SlotCard/styles.css
@@ -1,6 +1,7 @@
 .slot-card-container {
   justify-content: center;
-  padding: 12px;
+  align-items: center;
+  padding: 13px;
   border: 1px solid var(--primary-color);
   border-radius: 10px;
   min-width: 300px;
@@ -9,4 +10,17 @@
   font-size: 12px;
   font-family: sans-serif;
   font-weight: 600;
+  cursor: pointer;
+
+  transition: width 2s ease-in-out;
+  transition: background-color 2s ease-in-out;
+  transition: color 2s ease-in-out;
+  transition: display 2s ease-in-out;
+}
+
+.slot-card-selected {
+  padding: 8px;
+  justify-content: space-between;
+  background-color: var(--primary-color);
+  color: white;
 }
